--- a/index01.html
+++ b/index01.html
@@ -12,6 +12,7 @@
     </h1>
 <p id="paragrafo">Olá como vai voce?</p>
 
-<button type="button" onclick="mFuncao();">Translater</button>
+<button type="button" onclick="mFuncao();">Translater</button> <br>
+<a href="index02.html">Dom</a>
 </body>
 </html>
