--- a/index02.html
+++ b/index02.html
@@ -10,10 +10,17 @@
             text-shadow: -1px 1px 1px #000;
             margin: 30px;
         }
+        i{
+            color: red;
+            text-shadow: -1px 1px 1px #000;
+            margin: 30px 
+        }
     </style>
 </head>
 <body>
     <h1>Dom:</h1>
-    
+    <h1>javascript dom events list.</h1>
+<i>MDM.</i>
+
 </body>
 </html>
